# testlib

./: CMakeLists.txt  README.md  conanfile.py  struct
dump/: only_recipe_download.txt  todo.txt
dump/doxygen_official_1.9.4/: conandata.yml  conanmanifest.txt
include/: MyClass.h  Utilities.h
src/: Main.cpp  MyClass.cpp  Utilities.cpp
tests/: CMakeLists.txt  test_MyClass.cpp
